<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp" >

            <ImageView
                android:id="@+id/leitura_formulario_imgFoto"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@color/azul_medio_claro"
                android:padding="10dp"
                android:contentDescription="@string/txt_todo" />

            <ImageButton
                android:id="@+id/leitura_formulario_btnFoto"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/oval"
                android:contentDescription="@string/txt_todo"
                android:src="@drawable/ic_foto_branco_26" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/txt_unidade"
            android:textColor="@color/azul_escuro"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/leitura_formulario_edtUnidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:hint="@string/txt_unidade"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="21sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/txt_tipo_leitura"
            android:textColor="@color/azul_escuro"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/leitura_formulario_spnTipoLeitura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp" >
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/txt_medido"
            android:textColor="@color/azul_escuro"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/leitura_formulario_edtMedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:hint="@string/txt_medido"
            android:inputType="number"
            android:textSize="21sp" />
    </LinearLayout>

</ScrollView>