<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_leitura_consumo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:shrinkColumns="1"
    android:stretchColumns="1" >

    <TableRow
        android:background="@color/azul_medio_claro"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/leitura_listagem_btnLeituraMesAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:background="@null"
            android:drawableTop="@drawable/ic_anterior_laranja_32"
            android:paddingBottom="10sp"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:paddingTop="10sp"
            android:text="@string/txt_anterior"
            android:textColor="@color/laranja"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp" >

            <TextSwitcher
                android:id="@+id/leitura_listagem_txsMesLeitura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/leitura_listagem_txvTotalLeituras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/azul_escuro"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/leitura_listagem_btnLeituraProximoMes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@null"
            android:drawableTop="@drawable/ic_proximo_laranja_medio"
            android:paddingBottom="10sp"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:paddingTop="10sp"
            android:text="@string/txt_proximo"
            android:textColor="@color/laranja"
            android:textSize="14sp" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/leitura_listagem_lstLeituras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:headerDividersEnabled="true"
            android:listSelector="@color/azul_medio_claro" />

        <ImageButton
            android:id="@+id/leitura_listagem_btnAdicionaLeitura"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/txt_todo"
            android:src="@drawable/ic_add_branco_26" />
    </RelativeLayout>

</TableLayout>